--- a/home.html
+++ b/home.html
@@ -8,7 +8,8 @@
     <body>
         <div class="container">
             <div class="people">
-                
+                <h2> 1 </h2>
+                <h1>Visitor counts</h1>
             </div>
             <div class="box">
                 <button class="icon"><i class="fa fa-lightbulb-o" aria-hidden="true"></i></button>
